feat: add user management
