# src/main/java/com/example/bankcards/dto/AuthRequest.java
@@ -1,0 +1,15 @@
+package com.example.bankcards.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.Data;
+
+@Data
+public class AuthRequest {
+    @NotBlank
+    private String username;
+
+    @NotBlank
+    @Size(min = 6)
+    private String password;
+}
