# src/main/java/com/example/bankcards/dto/AuthResponse.java
@@ -1,0 +1,14 @@
+// src/main/java/com/example/bankcards/dto/AuthResponse.java
+package com.example.bankcards.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+
+@Data
+@Builder
+@AllArgsConstructor
+public class AuthResponse {
+    private String token;
+    private UserDto user;
+}
