# src/main/java/com/example/bankcards/dto/UserDto.java
@@ -1,0 +1,11 @@
+package com.example.bankcards.dto;
+
+import com.example.bankcards.entity.Role;
+import lombok.Data;
+
+@Data
+public class UserDto {
+    private Long id;
+    private String username;
+    private Role role;
+}
